Bug 1373331 - reserve 16px in the toolbar for browserAction button icons to avoid flickering when the icon loads, r=kmag.
UltraBlame original commit: 2a14d2f83f51bffb6c8378276b7f05a93a4e23de

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -2562,6 +2562,30 @@ moz
 box
 ;
 }
+.
+webextension
+-
+browser
+-
+action
+>
+.
+toolbarbutton
+-
+badge
+-
+stack
+>
+.
+toolbarbutton
+-
+icon
+{
+width
+:
+16px
+;
+}
 media
 not
 all
@@ -5664,13 +5688,7 @@ min
 -
 width
 :
-28px
-;
-max
--
-width
-:
-112px
+0
 ;
 }
 #
